--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <br>
       <div class="container-fluid bg-2 text-center" id="about">
         <h1>ABOUT ME</h1>
-        <p>Hello! I'm Ivan and I am a recent Computer Science Graduate from the University Of Winnipeg. I love for learning and being able to create through Software Development. I also love video games and have a passion for music. </p>
+        <p>Hello! I'm Ivan and I am a recent Computer Science Graduate from the University Of Winnipeg. I have a love for learning and being able to create through Software Development. I also love video games and have a passion for music. </p>
       </div>
       <br>
       <div class="container-fluid bg-3 text-center" id="education">
