--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             
             
             <div class="text-center">
-                <img src="selfie1.PNG" width="400" height="400"class="rounded img-circle" alt="...">
+                <img src="selfie1." width="400" height="400"class="rounded img-circle" alt="...">
               </div>
               <h1 class="header">Ivan Christian Siat</h1>
             <p class="header">Software Developer</p>
