updated resume and cv links

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       <div class="social-links">
         <a href="https://www.linkedin.com/in/ivan-christian-siat-2aa6831a8/" class="linkedin"><i class="bx bxl-linkedin" title="LinkedIn Profile"></i></a>
         <a href="https://github.com/IvanSiat" class="github"><i class="bi bi-github" title="GitHub Repository"></i></a>
-        <a href="Ivan Siat - Resume 2022.docx" class="Resume"><i class="bi bi-file-earmark-person" title="Resume"></i></a>
-        <a href="Ivan CV 2022 download.docx" class="CV"><i class="bi bi-file-earmark-person-fill" title="Cover Letter"></i></a>
+        <a href="Ivan 2022 Resume.docx" class="Resume"><i class="bi bi-file-earmark-person" title="Resume"></i></a>
+        <a href="Ivan CV 2022 .docx" class="CV"><i class="bi bi-file-earmark-person-fill" title="Cover Letter"></i></a>
         <a href="https://twitter.com/Aybanicio" class="twitter"><i class="bx bxl-twitter" title="Twitter"></i></a>
         <a href="https://www.instagram.com/aybanana17/" class="instagram"><i class="bx bxl-instagram" title="Instagram"></i></a>
 
