--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Address:</h4>
-                <p>71 Flett, Winnipeg, Manitoba, CA</p>
+                <h4>Location:</h4>
+                <p>Winnipeg, Manitoba, CA</p>
               </div>
 
               <div class="email">
