fixed link to Kaggle notebooks case study

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                   <p>Final Capstone project for the Google Data Analytics course</p>
                   <div class="portfolio-links">
                     <a href="assets/img/Capture.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                    <a href="https://www.kaggle.com/code/ivansiat/bellabeat-case-study-capstone-project" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                    <a href="https://tinyurl.com/ivancasestudy"><i class="bx bx-link"></i></a>
                   </div>
                 </div>
               </div>
