--- a/index.html
+++ b/index.html
@@ -95,16 +95,19 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>
-                    tinyurl.com/ivanweb</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (204) 951-1466</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Winnipeg, Manitoba, CA</span></li>
+                    <a href ="https://tinyurl.com/ivanweb">
+                    tinyurl.com/ivanweb</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <a href="tel:+12049511466">+1 (204) 951-1466</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:&#115;&#105;&#097;&#116;&#105;&#118;&#097;&#110;&#064;&#121;&#097;&#104;&#111;&#111;&#046;&#099;&#111;&#109;">siativan@yahoo.com</a></li>
+                  
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Undergraduate, BSc. in Applied Computer Science 4yr</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>siativan@yahoo.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Winnipeg, Manitoba, CA</span></li>
+                  
 
                 </ul>
               </div>
@@ -344,16 +347,16 @@
                 <p>Winnipeg, Manitoba, CA</p>
               </div>
 
-              <div class="email">
+              <div class="email"> <a href="mailto:&#115;&#105;&#097;&#116;&#105;&#118;&#097;&#110;&#064;&#121;&#097;&#104;&#111;&#111;&#046;&#099;&#111;&#109;">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>siativan@yahoo.com</p>
+                <p>siativan@yahoo.com</p></a>
               </div>
 
-              <div class="phone">
+              <div class="phone"> <a href="tel:+12049511466">
                 <i class="bi bi-phone"></i>
                 <h4>Call/Text:</h4>
-                <p>+1 (204) 951-1466)</p>
+                <p>+1 (204) 951-1466)</p></a>
               </div>
 
             </div>
