--- a/index.html
+++ b/index.html
@@ -135,44 +135,43 @@
 
           <div class="col-lg-6">
               <h3> Languages</h3>
-              <span class="skill">Java </span> <br>
-              <span class="skill">Python </span> <br>
-              <span class="skill">R </span> <br>
-              <span class="skill">C# </span> <br>
-              <span class="skill">SQL (Postgres) </span> <br>
-              <span class="skill">HTML </span> <br>
-              <span class="skill">CSS </span> <br>
-              <span class="skill">JavaScript</span> <br>
+              <span class="skill">&#x2022; Java </span> <br>
+              <span class="skill">&#x2022; Python </span> <br>
+              <span class="skill">&#x2022; R </span> <br>
+              <span class="skill">&#x2022; C# </span> <br>
+              <span class="skill">&#x2022; SQL (Postgres) </span> <br>
+              <span class="skill">&#x2022; HTML </span> <br>
+              <span class="skill">&#x2022; CSS </span> <br>
+              <span class="skill">&#x2022; JavaScript</span> <br>
           </div>
 
           <div class="col-lg-6">
             <h3> Frameworks</h3>
-            <span class="skill">React </span> <br>
-            <span class="skill">ASP.NET/.NET </span> <br>
-            <span class="skill">Node.js</span> <br>
-            <span class="skill">Express</span> <br>
-            <span class="skill">Bootstrap</span> <br>
-            <span class="skill">Spring Boot</span> <br>
+            <span class="skill">&#x2022; React </span> <br>
+            <span class="skill">&#x2022; ASP.NET/.NET </span> <br>
+            <span class="skill">&#x2022; Node.js</span> <br>
+            <span class="skill">&#x2022; Express</span> <br>
+            <span class="skill">&#x2022; Bootstrap</span> <br>
+            <span class="skill">&#x2022; Spring Boot</span> <br>
 
         </div>
 
         <div class="col-lg-6">
           <h3> Data Analysis</h3>
-          <span class="skill">Spreadsheets </span> <br>
-          <span class="skill">Visualization (ggplot2, Tableau) </span> <br>
-          <span class="skill">Data Manipulation and Cleaning </span> <br>
-          <span class="skill">R (Programming Language)</span> <br>
-          <span class="skill">Kaggle </span> <br>
+          <span class="skill">&#x2022; Spreadsheets </span> <br>
+          <span class="skill">&#x2022; Visualization (ggplot2, Tableau) </span> <br>
+          <span class="skill">&#x2022; Data Manipulation and Cleaning </span> <br>
+          <span class="skill">&#x2022; Kaggle </span> <br>
       </div>
       
       <div class="col-lg-6">
         <h3> Developer Tools</h3>
-        <span class="skill">Git/GitHub</span> <br>
-        <span class="skill">IDEs (VS Code, Visual Studio, IntelliJ, etc.)</span> <br>
-        <span class="skill">Software Development Lifecycle (Agile, Waterfall) </span> <br>
-        <span class="skill">Documentation (Manuals, Reports) </span> <br>
-        <span class="skill">Diagrams</span> <br>
-        <span class="skill">Data Structure and Algorithms</span> <br>
+        <span class="skill">&#x2022; Git/GitHub</span> <br>
+        <span class="skill">&#x2022; IDEs (VS Code, Visual Studio, IntelliJ, etc.)</span> <br>
+        <span class="skill">&#x2022; Software Development Lifecycle (Agile, Waterfall) </span> <br>
+        <span class="skill">&#x2022; Documentation (Manuals, Reports) </span> <br>
+        <span class="skill">&#x2022; Diagrams</span> <br>
+        <span class="skill">&#x2022; Data Structure and Algorithms</span> <br>
     </div>
          
 
@@ -337,7 +336,7 @@
           <h2>Contact</h2>
         </div>
 
-        <div class="row mt-1">
+        <div class="row mt-1 ">
 
           <div class="col-lg-4">
             <div class="info">
@@ -356,7 +355,7 @@
               <div class="phone"> <a href="tel:+12049511466">
                 <i class="bi bi-phone"></i>
                 <h4>Call/Text:</h4>
-                <p>+1 (204) 951-1466)</p></a>
+                <p>+1 (204) 951-1466</p></a>
               </div>
 
             </div>
