--- a/index.html
+++ b/index.html
@@ -296,6 +296,14 @@
               <p>BSc in Applied Computer Science</p>
             </div>
             <div class="resume-item">
+              <h4>Meta Front-end Developer Specialization</h4>
+              <h5>2023</h5>
+              <p><em>Meta, Coursera</em></p>
+              <p>Frontend Development Course by Meta, through Coursera</p>
+              <a href="
+              https://www.coursera.org/account/accomplishments/specialization/certificate/65R7ZJBZ2V7C"> Certificate Link</a>
+            </div>
+            <div class="resume-item">
               <h4>Meta Back-end Developer Specialization</h4>
               <h5>2023</h5>
               <p><em>Meta, Coursera</em></p>
@@ -377,6 +385,20 @@
 
     <div class="row">
       <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/Metafrontend.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Meta Front-end Developer Specialization</h4>
+              <p>Front-end Development course in HTMl, CSS, Javascript, React, and UI/UX Design</p>
+              <div class="portfolio-links">
+                <a href="assets/img/Metafrontend.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Preview"><i class="bx bx-plus"></i></a>
+                <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/65R7ZJBZ2V7C" class="portfolio-details-lightbox" data-glightbox="type: external" title="Certificate Link"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
