--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <li><a href="#skills" class="nav-link scrollto active"><i class="bx bx-code-alt"></i> <span>Skills</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <li><a href="#certificate" class="nav-link scrollto"><i class="bi bi-award"></i> <span>Certifications</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -60,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Ivan Siat</h1>
-      <p><span class="typed" data-typed-items="BSc Applied Computer Science, Software Developer, Data Analysis"></span></p>
+      <p><span class="typed" data-typed-items="BSc Applied Computer Science, Software Developer, Data Analyst"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/ivan-christian-siat-2aa6831a8/" class="linkedin">LinkedIn <i class="bx bxl-linkedin" title="LinkedIn Profile"></i></a>
         <a href="https://github.com/IvanSiat" class="github">GitHub <i class="bi bi-github" title="GitHub Repository"></i></a>
@@ -87,7 +88,7 @@
             <img src="assets/img/selfie1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Software Development and Data Analysis</h3>
+            <h3>Software Developer and Data Analyst</h3>
             <p class="fst-italic">
               
             </p>
@@ -104,7 +105,6 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Undergraduate, BSc. in Applied Computer Science 4yr</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Winnipeg, Manitoba, CA</span></li>
                   
@@ -375,12 +375,12 @@
 
 
  <!-- ======= Portfolio Section ======= -->
- <section id="portfolio" class="portfolio section-bg">
+ <section id="certificate" class="portfolio section-bg certificate">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
       <h2>Certifications</h2>
-      <p>Below is some of the certificates I've acquired</p>
+      <p>Below is some of the certificates I've acquired!</p>
     </div>
 
     <div class="row">
