added styling changes to resume section

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Undergraduate Degree</h4>
-              <h5>2016 - 2022</h5>
+              <h5>2022</h5>
               <p><em>University Of Winnipeg, Manitoba, Canada</em></p>
               <p>BSc in Applied Computer Science</p>
             </div>
@@ -324,15 +324,17 @@
               <p><em>University Of Winnipeg</em></p>
             </div>
             <h3 class="resume-title">Non-related Work Experience</h3>
-            <div class="resume-item">
 
+            <div class="resume-item">
               <h4>Remote Customer Relations Associate</h4>
               <h5>2022-2023</h5>
               <p><em>Hinduja Global Solutions</em></p>
               
+            </div><div class="resume-item">
               <h4>Counter Staff/Baking/Delivery Unloading</h4>
               <h5>2018-2021</h5>
               <p><em>Tim Hortons</em></p>
+
               
             </div><div class="resume-item">
               <h4>Courtesy Clerk</h4>
